animation added for navbar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-    <!-- Preloader -->
-
-    <!-- Preloader End -->
-
+    <div class="preloader" data-loader>
+        <div class="preloader-inner">
+            <img src="assets/images/icon.svg" width="50" height="50" alt="">
+        </div>
+    </div>
     <nav class="navbar" data-navbar>
         <div class="container">
 
@@ -57,7 +58,6 @@
                 </div>
                 <div class="app-list" data-item>
                     <li class="app-list-item">
-
                     </li>
                 </div>
             </div>
@@ -68,22 +68,3 @@
 </body>
 
 </html>
-<!-- <div class="movie">
-    <img src="https://images.pexels.com/photos/33129/popcorn-movie-party-entertainment.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-        width="400" alt="" class="movie-img">
-    <div class="movie-img-overlay">
-        <div class="movie-info">
-            <h1 class="movie-title">
-                Movie Title
-            </h1>
-            <span class="movie-rating">
-                9.8
-            </span>
-        </div>
-        <p class="movie-text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim pariatur totam sed
-            beatae molestias. Quibusdam illo, inventore aliquam aspernatur harum modi atque
-            obcaecati sunt recusandae? Architecto dignissimos quo quisquam nemo!
-        </p>
-    </div>
-</div> -->
