preloader not working check later

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <div class="preloader" data-loader>
+    <!-- <div class="preloader" data-loader>
         <div class="preloader-inner">
             <img src="assets/images/icon.svg" width="50" height="50" alt="">
         </div>
-    </div>
+    </div> -->
     <nav class="navbar" data-navbar>
         <div class="container">
 
